--- a/homework19/templates/fouth_task/menu.html
+++ b/homework19/templates/fouth_task/menu.html
@@ -15,6 +15,7 @@
                 <li><a href="{% url 'menu' %}">Главная</a></li>
                 <li><a href="{% url 'shop' %}">Магазин</a></li>
                 <li><a href="{% url 'cart' %}">Корзина</a></li>
+                <li><a href="{% url 'news' %}">Новости</a></li>
                 {% endblock %}
             </ul>
         </nav>
